--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@ng-bootstrap/ng-bootstrap": "^13.1.1",
     "@popperjs/core": "^2.10.2",
     "@supabase/supabase-js": "^2.4.1",
+    "angular-fusioncharts": "^4.0.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "fusioncharts": "^3.19.0",
     "jquery": "^3.6.3",
     "ngx-spinner": "^14.0.0",
     "rxjs": "~7.4.0",
