--- a/package.json
+++ b/package.json
@@ -10,22 +10,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.1.2",
-    "@angular/common": "^15.1.2",
-    "@angular/compiler": "^15.1.2",
-    "@angular/core": "^15.1.2",
+    "@angular/animations": "^14.2.12",
+    "@angular/common": "^14.2.12",
+    "@angular/compiler": "^14.2.12",
+    "@angular/core": "^14.2.12",
     "@angular/fire": "^7.5.0",
-    "@angular/forms": "^15.1.2",
-    "@angular/platform-browser": "^15.1.2",
-    "@angular/platform-browser-dynamic": "^15.1.2",
-    "@angular/router": "^15.1.2",
+    "@angular/forms": "^14.2.12",
+    "@angular/platform-browser": "^14.2.12",
+    "@angular/platform-browser-dynamic": "^14.2.12",
+    "@angular/router": "^14.2.12",
     "@ng-bootstrap/ng-bootstrap": "^13.1.1",
     "@popperjs/core": "^2.10.2",
     "@supabase/supabase-js": "^2.4.1",
     "angular-fusioncharts": "^4.0.0",
+    "angular-highcharts": "^14.1.7",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "chart.js": "^4.2.0",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "fusioncharts": "^3.19.0",
+    "highcharts": "^10.3.3",
+    "highcharts-angular": "^3.0.0",
     "jquery": "^3.6.3",
     "ngx-spinner": "^14.0.0",
     "rxjs": "~7.4.0",
@@ -33,10 +39,11 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.3",
-    "@angular/cli": "^15.1.3",
-    "@angular/compiler-cli": "^15.1.2",
-    "@angular/localize": "^15.1.2",
+    "@angular-devkit/build-angular": "^14.2.10",
+    "@angular/cli": "^14.2.10",
+    "@angular/compiler-cli": "^14.2.12",
+    "@angular/localize": "^14.2.12",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.4.13",
